1998-09-04  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* MessageProbeWidget.m (printVal): Add support for unsigned int,
	long, and unsigned long.

1998-09-03  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* simtoolsgui.h (CommonProbeDisplay): Declare -getTopLevel.

	* CommonProbeDisplay.[hm]: Add -getTopLevel.

1998-08-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (CURRENT): Increment.  Swarm 1.3 released.

1998-08-18  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ActionCache.m: Include objectbase/Arguments.h.
	([ActionCache -insertAction:]): Set selector to setStateNextTime
	for Next.
	([ActionCache -deliverActions]): If showCurrentTimeFlag is set,
	print the current time in the title of the control panel widget.
	Handle Next like Step (i.e. immediately).
	([ActionCache -sendNextAction]): Send Next on sendNextAction, not Step.
	([ActionCache -createProcCtrl]): Don't create a button for Step.

	* simtoolsgui.h (SingleProbeDisplay): Add //S and //D.

1998-07-22  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ControlPanel.[hm]: Declare.
	ControlState{Running,Stopped,Stepping,NextTime,Quit} symbols.

	* simtoolsgui.m: Include ControlPanel.h.  Define symbols above.

1998-07-21  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* MessageProbeWidget.m: Don't include stdlib.h.
	([MessageProbeWidget -createEnd]): Use xmalloc instead of malloc.

	* MultiVarProbeDisplay.h (CommonProbeDisplay): Make hideB
	conform to SimpleProbeDisplayHideButton.

1998-07-19  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ClassDisplayWidget.m ([ClassDisplayWidget -getTopLevel]): 
	New method.

1998-07-15  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* SimpleProbeDisplay.m ([SimpleProbeDisplay -createEnd]): 
	Remove local variables that are now instance variables (below).
	([SimpleProbeDisplay -drop]): Drop hideB and title here.
	Don't drop topLevel. Drop raisedFrame and top_top_Frame.
	Rename myTitle to title throughout.
